# LLVMKaleidoscope

./: .gitignore  BUGS.md  Cargo.toml  Makefile  README.md  crates.js  rustfmt.toml  search-index.js  settings.html  source-files.js
filestream/: all.html  fn.main.html  index.html
implementors/kaleidoscope/: trait.ErrorKind.js
implementors/kaleidoscope_error/: trait.ErrorKind.js
kaleidoscope/: all.html  enum.TokenKind.html  index.html  macro.function_name.html  macro.function_path.html  macro.hash_map.html  macro.impl_display.html  macro.untrimmed_function_path!.html  macro.untrimmed_function_path.html  sidebar-items.js  struct.CodeGen.html  struct.Driver.html  struct.Error.html  struct.Interpreter.html  struct.NodeId.html  struct.Parser.html  struct.To64LLVMWord.html  struct.Token.html  struct.Tokenizer.html  trait.ErrorKind.html  trait.IRRepresentableExpression.html  trait.IRRepresentableNode.html  trait.Node.html  type.ParseResult.html  type.Result.html
kaleidoscope/nodes/: enum.Operator.html  index.html  sidebar-items.js  struct.BinaryOperatorNode.html  struct.ExternFunctionNode.html  struct.FloatNode.html  struct.FunctionCallNode.html  struct.FunctionNode.html  struct.FunctionPrototypeNode.html  struct.IdentifierNode.html  struct.IntegerNode.html  struct.UnaryOperatorNode.html  struct.VariableExpressionNode.html  type.FloatType.html  type.IntegerType.html
kaleidoscope_ast/: all.html  index.html  sidebar-items.js  struct.NodeId.html
kaleidoscope_ast/error/: enum.ErrorKind.html  index.html  sidebar-items.js  type.Error.html  type.Result.html
kaleidoscope_ast/node/: enum.NodeEnum.html  fn.reify_expr_node.html  fn.reify_expr_node_mut.html  fn.reify_expr_node_ref.html  fn.reify_node.html  fn.reify_node_mut.html  fn.reify_node_ref.html  fn.typeid_to_u64.html  fn.upcast_expr_node.html  index.html  sidebar-items.js  trait.ExprNode.html  trait.FromToken.html  trait.Node.html  trait.NodeType.html
kaleidoscope_ast/nodeid/: index.html  sidebar-items.js  struct.NodeId.html  type.IdInner.html
kaleidoscope_ast/nodes/: enum.Operator.html  index.html  sidebar-items.js  struct.BinaryOperatorNode.html  struct.ExternFunctionNode.html  struct.FloatNode.html  struct.FunctionCallNode.html  struct.FunctionNode.html  struct.FunctionPrototypeNode.html  struct.IdentifierNode.html  struct.IntegerNode.html  struct.UnaryOperatorNode.html  struct.VariableExpressionNode.html  type.FloatType.html  type.IntegerType.html
kaleidoscope_ast/prelude/: index.html  sidebar-items.js  struct.NodeId.html
kaleidoscope_codegen/: all.html  index.html  sidebar-items.js
kaleidoscope_codegen/builtins/: index.html  sidebar-items.js
kaleidoscope_codegen/codegen/: fn.create_code_gen.html  index.html  sidebar-items.js  struct.CodeGen.html  struct.CodeGenInner.html  type.NamedValues.html
kaleidoscope_codegen/error/: enum.ErrorKind.html  index.html  sidebar-items.js  type.Error.html  type.Result.html
kaleidoscope_codegen/int/: index.html  sidebar-items.js  struct.To64BEWord.html  struct.To64LLVMWord.html
kaleidoscope_codegen/traits/: index.html  sidebar-items.js  trait.IRRepresentableExpression.html  trait.IRRepresentableNode.html
kaleidoscope_error/: all.html  index.html  sidebar-items.js  struct.Error.html  trait.ErrorKind.html  type.Result.html
kaleidoscope_lexer/: all.html  index.html  macro.ltuplemut!.html  macro.ltuplemut.html  macro.ltupleref!.html  macro.ltupleref.html  sidebar-items.js
kaleidoscope_lexer/error/: enum.ErrorKind.html  index.html  sidebar-items.js  type.Error.html  type.Result.html
kaleidoscope_lexer/token/: constant.LEFT_ANGLED_BRACKET.html  constant.LEFT_CURLY_BRACKET.html  constant.LEFT_ROUND_BRACKET.html  constant.LEFT_SQUARE_BRACKET.html  constant.RIGHT_ANGLED_BRACKET.html  constant.RIGHT_CURLY_BRACKET.html  constant.RIGHT_ROUND_BRACKET.html  constant.RIGHT_SQUARE_BRACKET.html  constant.UNKNOWN_BRACKET.html  enum.BracketKind.html  enum.BracketSide.html  enum.Keyword.html  enum.Operator.html  enum.TokenKind.html  index.html  sidebar-items.js  struct.Bracket.html  struct.FileIndex.html  (+1 more)
kaleidoscope_logging/: all.html  fn.init.html  index.html  sidebar-items.js
kaleidoscope_macro/: all.html  index.html  macro.function_name.html  macro.function_path.html  macro.hash_map.html  macro.impl_display.html  macro.iterator_to_str!.html  macro.iterator_to_str.html  macro.ok_none!.html  macro.ok_none.html  macro.return_ok_some!.html  macro.return_ok_some.html  macro.untrimmed_function_path.html  sidebar-items.js
kaleidoscope_parser/: all.html  index.html  sidebar-items.js
kldnum/: all.html  fn.main.html  index.html
repl/: all.html  constant.WELCOME_MESSAGE.html  fn.main.html  fn.press_enter_to_continue.html  index.html  sidebar-items.js
src/: lib.rs
src/ast/: Cargo.toml
src/ast/src/: error.rs  lib.rs  node.rs  nodeid.rs  tests.rs
src/ast/src/nodes/: binaryop.rs  externfunc.rs  float.rs  funccall.rs  funcprot.rs  function.rs  identifier.rs  integer.rs  mod.rs  operator.rs  tests.rs  unaryop.rs  varexpr.rs
src/codegen/: Cargo.toml
src/codegen/src/: codegen.rs  error.rs  int.rs  lib.rs  traits.rs
src/codegen/src/builtins/: global.rs  mod.rs  number.rs
src/codegen/src/tests/: int.rs  mod.rs
src/error/: Cargo.toml
src/error/src/: lib.rs
src/lexer/: Cargo.toml
src/lexer/src/: error.rs  lib.rs  utils.rs
src/lexer/src/token/: bracket.rs  fileindex.rs  index.rs  keyword.rs  mod.rs  operator.rs  token.rs  tokenkind.rs
src/lexer/src/tokenizer/: err.rs  filestream.rs  immuttokenizer.rs  lexerser.rs  lexertuple.rs  mod.rs  stream.rs  tokenizer.rs  tokiter.rs  tokstream.rs
src/logging/: Cargo.toml
src/logging/src/: error.rs  helpers.rs  lib.rs
src/macro/: Cargo.toml
src/macro/src/: lib.rs  tests.rs
src/optimization/: Cargo.toml
src/optimization/src/: function.rs  module.rs
src/parser/: Cargo.toml
src/parser/src/: driver.rs  error.rs  lib.rs  parser.rs  precedence.rs
src/parser/src/tests/: mod.rs  parser_tests.rs  precedence_tests.rs
tokenizer/: all.html  enum.OutputFormats.html  fn.main.html  index.html  sidebar-items.js
(+267 files in other folders)
