[package]
name = "LLVMKaleidoscope"
version = "0.1.0"
authors = ["RenoirTan"]
edition = "2018"
description = "LLVM's Kaleidoscope tutorial but in Rust."
readme = "README.md"
license = "MIT"
license-file = "LICENSE"
publish = false

[dependencies]
LLVMKaleidoscope-Ast = {path = "src/ast"}
LLVMKaleidoscope-Error = {path = "src/error"}
LLVMKaleidoscope-Lexer = {path = "src/lexer"}
LLVMKaleidoscope-Macro = {path = "src/macro"}

[workspace]
include = ["src"]
members = [
    "src/ast",
    "src/error",
    "src/lexer",
    "src/macro"
]

[lib]
name = "kaleidoscope"
test = false
doctest = false
bench = false
doc = true
crate-type = ["lib"]
