[package]
name = "LLVMKaleidoscope"
version = "0.1.0"
authors = ["RenoirTan"]
edition = "2018"
description = "LLVM's Kaleidoscope tutorial but in Rust."
readme = "README.md"
license-file = "LICENSE"
publish = false

[dependencies]
clap = "~2.33"
serde_json = "~1.0"
toml = "~0.5"
LLVMKaleidoscope-Ast = {path = "src/ast"}
LLVMKaleidoscope-Error = {path = "src/error"}
LLVMKaleidoscope-Lexer = {path = "src/lexer"}
LLVMKaleidoscope-Macro = {path = "src/macro"}
LLVMKaleidoscope-Parser = {path = "src/parser"}

[workspace]
members = [
    "src/ast",
    "src/error",
    "src/lexer",
    "src/macro",
    "src/parser"
]

[lib]
name = "kaleidoscope"
test = true
doctest = true
bench = false
doc = true
crate-type = ["lib"]

[[bin]]
name = "filestream"
path = "src/bin/filestream.rs"
test = false
doctest = false

[[bin]]
name = "tokenizer"
path = "src/bin/tokenizer.rs"
test = false
doctest = false

[[bin]]
name = "repl"
path = "src/bin/repl.rs"
test = false
doctest = false
