[package]
name = "LLVMKaleidoscope"
version = "0.1.0"
authors = ["RenoirTan"]
edition = "2018"
description = "LLVM's Kaleidoscope tutorial but in Rust."
readme = "README.md"
license-file = "LICENSE"
publish = false

[dependencies]
clap = "~2.33"
serde_json = "~1.0"
toml = "~0.5"
log = "~0.4"
env_logger = "~0.9"
LLVMKaleidoscope-Ast = {path = "src/ast"}
LLVMKaleidoscope-Codegen = {path = "src/codegen"}
LLVMKaleidoscope-Error = {path = "src/error"}
LLVMKaleidoscope-Lexer = {path = "src/lexer"}
LLVMKaleidoscope-Logging = {path = "src/logging"}
LLVMKaleidoscope-Macro = {path = "src/macro"}
LLVMKaleidoscope-Parser = {path = "src/parser"}

[dependencies.inkwell]
git = "https://github.com/TheDan64/inkwell"
branch = "master"
features = ["llvm12-0"]

[workspace]
members = [
    "src/ast",
    "src/error",
    "src/lexer",
    "src/logging",
    "src/macro",
    "src/parser"
]

[lib]
name = "kaleidoscope"
test = true
doctest = true
bench = false
doc = true
crate-type = ["lib"]

[[bin]]
name = "filestream"
path = "src/bin/filestream.rs"
test = false
doctest = false

[[bin]]
name = "tokenizer"
path = "src/bin/tokenizer.rs"
test = false
doctest = false

[[bin]]
name = "repl"
path = "src/bin/repl.rs"
test = false
doctest = false

[[bin]]
name = "kldnum"
path = "src/bin/kldnum.rs"
test = false
doctest = false
