[package]
name = "LLVMKaleidoscope-Ast"
version = "0.1.0"
authors = ["RenoirTan"]
edition = "2018"
description = "AST used in LLVM's Kaleidoscope tutorial but in Rust."
license = "MIT"
publish = false

[dependencies]
either = "~1.6"
log = "~0.4"
LLVMKaleidoscope-Codegen = {path = "../codegen"}
LLVMKaleidoscope-Error = {path = "../error"}
LLVMKaleidoscope-Lexer = {path = "../lexer"}
LLVMKaleidoscope-Logging = {path = "../logging"}
LLVMKaleidoscope-Macro = {path = "../macro"}

[dependencies.inkwell]
git = "https://github.com/TheDan64/inkwell"
branch = "master"
features = ["llvm12-0"]

[lib]
name = "kaleidoscope_ast"
test = true
doctest = true
bench = false
doc = true
crate-type = ["lib"]
