[package]
name = "LLVMKaleidoscope-Codegen"
version = "0.1.0"
authors = ["RenoirTan"]
edition = "2018"
description = "LLVM IR code generator for LLVM's Kaleidoscope tutorial but in Rust."
license = "MIT"
publish = false

[dependencies]
log = "~0.4"
LLVMKaleidoscope-Ast = {path = "../ast"}
LLVMKaleidoscope-Error = {path = "../error"}
LLVMKaleidoscope-Lexer = {path = "../lexer"}
LLVMKaleidoscope-Logging = {path = "../logging"}
LLVMKaleidoscope-Macro = {path = "../macro"}
LLVMKaleidoscope-Parser = {path = "../parser"}

[lib]
name = "kaleidoscope_codegen"
test = true
doctest = true
bench = false
doc = true
crate-type = ["lib"]