[package]
name = "LLVMKaleidoscope-Error"
version = "0.1.0"
authors = ["RenoirTan"]
edition = "2018"
description = "Error used in LLVM's Kaleidoscope tutorial but in Rust."
license = "MIT"
publish = false

[dependencies]
LLVMKaleidoscope-Macro = {path = "../macro"}

[lib]
name = "kaleidoscope_error"
test = true
doctest = true
bench = false
doc = true
crate-type = ["lib"]
