[package]
name = "LLVMKaleidoscope-Lexer"
version = "0.1.0"
authors = ["RenoirTan"]
edition = "2018"
description = "Lexer for LLVM's Kaleidoscope tutorial but in Rust."
license = "MIT"
publish = false

[dependencies]
serde = { version = "~1.0", features = ["derive"] }
log = "~0.4"
LLVMKaleidoscope-Error = {path = "../error"}
LLVMKaleidoscope-Logging = {path = "../logging"}
LLVMKaleidoscope-Macro = {path = "../macro"}

[lib]
name = "kaleidoscope_lexer"
test = true
doctest = true
bench = false
doc = true
crate-type = ["lib"]
