[package]
name = "LLVMKaleidoscope-Macro"
version = "0.1.0"
authors = ["RenoirTan"]
edition = "2018"
description = "Definitions for macros used for LLVM's Kaleidoscope tutorial but in Rust."
license = "MIT"
publish = false

[dependencies]

[lib]
name = "kaleidoscope_macro"
test = true
doctest = true
bench = false
doc = true
crate-type = ["lib"]
