[package]
name = "LLVMKaleidoscope-Optimization"
version = "0.1.0"
authors = ["RenoirTan"]
edition = "2018"
description = "Optimisation utilities for LLVM's Kaleidoscope tutorial but in Rust."
license = "MIT"
publish = false

[dependencies]
log = "~0.4"
env_logger = "~0.9"
LLVMKaleidoscope-Error = {path = "../error"}
LLVMKaleidoscope-Macro = {path = "../macro"}
LLVMKaleidoscope-Logging = {path = "../logging"}

[dependencies.inkwell]
git = "https://github.com/TheDan64/inkwell"
branch = "master"
features = ["llvm12-0"]

[lib]
name = "kaleidoscope_optimization"
test = true
doctest = true
bench = false
doc = true
crate-type = ["lib"]